integrando listado de computadoras

--- a/src/app/computadora/computadora.component.html
+++ b/src/app/computadora/computadora.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<li class="col-md-4">
     <div class="card-content">
         <div class="card-img">
             <span>
@@ -12,4 +12,4 @@
             </span>
         </div>
     </div>
-</div>
+</li>
